# s2dm

./: .bumpversion.toml  .gitignore  .gitmodules  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cliff.toml  index.html  index.searchindex.html  index.searchpage.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-commit-gh-pages.yml  ci.yml  docgen.yml  release.yml
1-approach-overview/: index.html
1-approach-overview/1.1-objects-and-properties/: index.html
1-approach-overview/1.2-concept-uris/: index.html
1-approach-overview/1.3-multi-hierarchies/: index.html
1-approach-overview/1.4-variant-ids/: index.html
1-approach-overview/1.5-spec-registry/: index.html
1-approach-overview/1.6-capabilities/: index.html
1-modeling-guideline/: index.html
1-modeling-guideline/1.1-objects-and-properties/objects_and_properties/: index.html
1-modeling-guideline/1.2-concept-uris/concept_uris/: index.html
1-modeling-guideline/1.3-multi-hierarchies/multi_hierarchies/: index.html
1-modeling-guideline/1.4-variant-ids/variant_ids/: index.html
1-modeling-guideline/1.5-spec-registry/spec_registry/: index.html
1-modeling-guideline/1.6-capabilities/capabilities/: index.html
1-modeling-guideline/1.7-pre-defined-elements/pre_defined_elements/: index.html
1-modeling-guideline/others/approach_primer/: index.html
1-modeling-guideline/others/basic_principle/: index.html
1-modeling-guideline/others/contributing/: index.html
1-modeling-guideline/others/modeling/: index.html
2-data-modeling-guideline/: index.html
2-data-modeling-guideline/2.1.-pre-defined-elements/: index.html
2-data-modeling-guideline/2.2-how-to/: index.html
2-tools/: index.html
3-examples/: index.html
3-examples/version-bump-cli/: index.html
3-tools/: index.html
3-tools/3.1-cli/: index.html
3-tools/3.2-automation/: index.html
4-examples/: index.html
4-examples/version-bump-cli/: index.html
5-faqs/: index.html
actions/s2dm-publish/: README.md  action.yml
approach/: index.html
categories/: index.html
docs/: 404.html  APPROACH_PRIMER.md  CONTRIBUTING.md  index.html  index.search.js  index.xml  search.html  sitemap.xml
docs-gen/: config.toml  hugo.yaml  package-lock.json  package.json
docs-gen/config/_default/: hugo.toml  params.toml
docs-gen/content/: _index.md
docs-gen/content/approach/: _index.md
docs-gen/content/examples/: _index.md  seat-voyager.md
docs-gen/content/guides/: _index.md  contributing.md
docs-gen/content/license/: _index.md
docs-gen/content/modeling-guideline/: _index.md
docs-gen/content/tools/: _index.md
docs-gen/layouts/: home.html
docs-gen/layouts/shortcodes/: graphql-voyager-builtin.html
docs-ref/: APPROACH_PRIMER.md  CONTRIBUTING.md
docs/approach/: index.html  index.xml
docs/categories/: index.html  index.xml
docs/examples/: index.html  index.xml
docs/guides/: index.html  index.xml
docs/guides/contributing/: index.html
docs/guides/modeling/: index.html
docs/license/: index.html  index.xml
docs/tags/: index.html  index.xml
examples/: index.html
examples/coffee-shop/v1/: invalid_schema.graphql  output.json  schema.graphql  validated.graphql
examples/coffee-shop/v2/: schema.graphql
examples/graphql-to-jsonschema/: .gitignore  README.md  example.graphql
examples/graphql-to-skos/: sample.graphql
examples/notebooks/: README.md  poc_graphql_to_proto.ipynb
examples/schema-rdf/: README.md
examples/seat-to-vspec/readme/: index.html
examples/spec-history-registry/: .gitignore  README.md  example_spec_registry_workflow.sh  sample.graphql  sample_updated.graphql
examples/spec-history-registry/readme/: index.html
examples/trailer/modular_trailer_example/: Vehicle.graphql  VehicleTrailer.graphql  VehicleTrailerAxle.graphql  VehicleTrailerWheel.graphql
examples/units/external_qudt/: APIGravityUnitEnum.graphql  AbsoluteActivityUnitEnum.graphql  AbsorbedDoseRateUnitEnum.graphql  AbsorbedDoseUnitEnum.graphql  AbsorptanceUnitEnum.graphql  AccelerationUnit.graphql  AccelerationUnitEnum.graphql  AcidityUnitEnum.graphql  AcousticImpedanceUnitEnum.graphql  ActionUnitEnum.graphql  ActivityCoefficientUnitEnum.graphql  ActivityConcentrationUnitEnum.graphql  ActivityUnitEnum.graphql  AdmittanceUnitEnum.graphql  AmountOfCloudCoverUnitEnum.graphql  AmountOfSubstanceFractionUnitEnum.graphql  AmountOfSubstancePerMassPressureUnitEnum.graphql  AmountOfSubstancePerMassUnitEnum.graphql  AmountOfSubstanceUnitEnum.graphql  AngleUnitEnum.graphql  AngularAccelerationUnitEnum.graphql  AngularCrossSectionUnitEnum.graphql  AngularFrequencyUnitEnum.graphql  AngularImpulseUnitEnum.graphql  AngularMomentumPerAngleUnitEnum.graphql  AngularMomentumUnitEnum.graphql  AngularVelocityUnitEnum.graphql  (+579 more)
guides/: index.html
guides/contributing/: index.html
guides/modeling/: index.html
jsonschema/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
jsonschema/src/: types.ts
license/: index.html
others/: index.html
others/approach_primer/: index.html
others/basic_principle/: index.html
playground/: index.html  package-lock.json  package.json  vite.config.ts
playground/src/: App.tsx  constants.ts  index.css  main.tsx
search/: index.html
src/s2dm/: __init__.py  cli.py  logger.py
src/tools/: to_vspec.py
tags/: index.html
tests/: conftest.py  test_api_core.py  test_api_exports.py  test_api_schema_routes.py  test_api_schema_service.py  test_check_constraint.py  test_e2e_cli.py  test_e2e_json.py  test_e2e_jsonschema.py  test_e2e_linkml.py  test_e2e_mongodb.py  test_gql_inspector.py  test_id_exporter_variants.py  test_json.py  test_json_no_vspec.py  test_json_vspec_meta.py  test_linkml.py  test_mongodb.py  test_naming_utils.py  test_rdf_materializer.py  test_s2dm.py  test_schema_loader.py  test_schema_processing.py  test_skos_search.py  test_sparql_queries.py  test_units_sync.py  test_utils.py  test_vspec.py
tests/data/: schema1-1.graphql  schema1-2.graphql  schema1.graphql  schema2-1.graphql  schema2-2.graphql  schema2.graphql  schema3.graphql
tools/: index.html
(+384 files in other folders)
